--- a/automations.yaml
+++ b/automations.yaml
@@ -1812,7 +1812,6 @@
 - id: '1641984337744'
   alias: 'NFC: Music player'
   description: Play music from YouTube Music when a tag is scanned
-  mode: single
   trigger:
   - platform: event
     event_type: tag_scanned
@@ -1832,17 +1831,26 @@
   - service: media_player.select_source
     data:
       source: '{{ media_player_entity_id }}'
-      entity_id: media_player.youtube_music
+      entity_id: media_player.ytube_music_player
   - service: media_player.play_media
     data:
-      entity_id: media_player.youtube_music
+      entity_id: media_player.ytube_music_player
       media_content_id: '{{ media_content_id }}'
       media_content_type: '{{ media_content_type }}'
+  mode: single
   variables:
     media_players:
       43ddd1e400d41d9d547f7bc24a95f86d: media_player.reuben_s_room_speaker
       4dd136882e204aec5b9809887714f25b: media_player.seb_s_home
     tags:
+      04-29-6F-AA-ED-6C-80:
+        media_content_id: PLbNmRtwuOMuihM4wbhdfbhyvnoHt5Rs0P
+        media_content_type: playlist
+        title: Reubens Favourite Music (card)
+      04-7B-6F-AA-ED-6C-80:
+        media_content_id: PLbNmRtwuOMuijrqEgfJowKcaKiqeBATG2
+        media_content_type: playlist
+        title: Sebs Favourite Music (card)
       D0-50-B3-32:
         media_content_id: PLbNmRtwuOMuihM4wbhdfbhyvnoHt5Rs0P
         media_content_type: playlist
