--- a/esphome/epaper-t5.yaml
+++ b/esphome/epaper-t5.yaml
@@ -51,13 +51,9 @@ time:
         - component.update: sunset
 
 external_components:
-  - source:
-      type: git
-      url: https://github.com/vbaksa/esphome
-      ref: dev
+  - source: github://ashald/esphome@lilygo-t5-47
     components:
-      - lilygo_t5_47_battery 
-      - lilygo_t5_47_display
+      - lilygo_t5_47
  
 sun:
   latitude: 53.839696824370925°
@@ -162,8 +158,10 @@ script:
              return id(page_crypto);
               break;
             case 3:
-            default:
               return id(page_crypto_graph);
+            case 4: 
+            default:
+              return id(page_time_quote);
           }
     
       - component.update: t5_display
@@ -224,6 +222,22 @@ script:
             - logger.log: "Prevent deep sleep enabled."
 text_sensor:
   - platform: homeassistant
+    id: quote_text
+    entity_id: sensor.time_quotation
+    attribute: quote
+  - platform: homeassistant
+    id: quote_time
+    entity_id: sensor.time_quotation
+    attribute: timeText
+  - platform: homeassistant
+    id: quote_title
+    entity_id: sensor.time_quotation
+    attribute: title
+  - platform: homeassistant
+    id: quote_author
+    entity_id: sensor.time_quotation
+    attribute: author
+  - platform: homeassistant
     id: current_page_select
     entity_id: input_select.epaper_page
     on_value:
@@ -233,8 +247,10 @@ text_sensor:
               id(current_page) = 1;
             } else if (id(current_page_select).state == "Crypto") {
               id(current_page) = 2;
-            } else { // if (id(current_page_select).state == "Graph") {
+            } else if (id(current_page_select).state == "Graph") {
               id(current_page) = 3;
+            } else {
+              id(current_page) = 4;
             }
         - script.execute: show_page
         
@@ -374,20 +390,7 @@ button:
     name: "${friendly_name} Restart"
 
 sensor:
-  - platform: lilygo_t5_47_battery
-    id: batt_volt
-    voltage:
-      name: "Battery Voltage"
-  - platform: template
-    name: "${friendly_name} Battery"
-    id: batt
-    unit_of_measurement: "%"
-    accuracy_decimals: 0
-    device_class: battery
-    lambda: |-
-      int y = (1-(4.1-id(batt_volt).voltage->state)/(4.1-3.3))*100;
-      if (y < 100) {return y;} else {return 100;};
-    
+
   - platform: homeassistant
     id: crypto_change
     entity_id: 'sensor.crypto_portfolio_change'
@@ -448,14 +451,12 @@ graph:
         line_thickness: 5
     
 display:
-  - platform: lilygo_t5_47_display
+  - platform: lilygo_t5_47
     id: t5_display
     rotation: 180
     full_update_every: 10
-    power_off_delay_enabled: true
     update_interval: never
     pages:
-    
       - id: page_white
         lambda: |-
           #define xres 960 
@@ -478,7 +479,9 @@ display:
           #define yres 540
           #define x_pad 10 // border padding
           #define y_pad 10 // border padding      
-          
+          #define BATTERY_MAX 4.2
+          #define BATTERY_MIN 2.9
+
           #define y1 0
           #define y2 285
           #define y3 425
@@ -486,8 +489,8 @@ display:
           #define x1 x_pad // x position 1st column name
           #define x2 ((xres/3) * 1) // x position 2nd column name
           #define x3 ((xres/3) * 2) // x position 3rd column name
-          
-          
+
+
           it.printf(x_pad, 40, id(font_value), TextAlign::TOP_LEFT, "Balance £%.2f", id(crypto_portfolio).state);
           std::string changeIcon = "\U000F0FE1";
           std::string change = "";
@@ -527,7 +530,13 @@ display:
           it.filled_rectangle(0, yres-30, xres, yres);
           it.strftime(x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_LEFT, "%A %d/%b/%Y", id(ntp).now());
           it.strftime(xres/2, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_CENTER, "Updated %H:%M", id(ntp).now());
-          it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_RIGHT, "%.2fV/%.0f%%", id(batt_volt).voltage->state, id(batt).state);
+  
+          // Now we're ready to read the battery
+          double_t battery_voltage = id(t5_display).get_battery_voltage();
+          double_t percentage = (1-(4.2-battery_voltage)/(4.2-2.9))*100;
+          uint8_t battery_percentage = percentage < 0 ? 0 : percentage > 100 ? 100 : percentage;
+        
+          it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_RIGHT, "%.2fV/%.0f%%", battery_voltage, percentage);
           
       - id: page_temps
         lambda: |-
@@ -610,7 +619,7 @@ display:
           it.filled_rectangle(0, yres-30, xres, yres);
           it.strftime(x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_LEFT, "%A %d/%b/%Y", id(ntp).now());
           it.strftime(xres/2, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_CENTER, "Updated %H:%M", id(ntp).now());
-          it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_RIGHT, "%.2fV/%.0f%%", id(batt_volt).voltage->state, id(batt).state);
+          //it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_RIGHT, "%.2fV/%.0f%%", id(batt_volt).voltage->state, id(batt).state);
           
       - id: page_crypto_graph
         lambda: |-
@@ -631,8 +640,13 @@ display:
           //it.line(0, yres-30, xres, yres-30);
           it.strftime(x_pad, yres-y_pad/2, id(font_footer), COLOR_ON, TextAlign::BASELINE_LEFT, "%A %d/%b/%Y", id(ntp).now());
           it.strftime(xres/2, yres-y_pad/2, id(font_footer), COLOR_ON, TextAlign::BASELINE_CENTER, "Updated %H:%M", id(ntp).now());
-          it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_ON, TextAlign::BASELINE_RIGHT, "%.2fV/%.0f%%", id(batt_volt).voltage->state, id(batt).state);
-          
+          //it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_ON, TextAlign::BASELINE_RIGHT, "%.2fV/%.0f%%", id(batt_volt).voltage->state, id(batt).state);
+      - id: page_time_quote
+        lambda: |-
+          it.printf(xres/2, y_pad, id(font_value), COLOR_ON, TextAlign::TOP_CENTER, id(quote_time).state.c_str());
+          it.printf(x_pad, 50, id(font_value), COLOR_ON, TextAlign::TOP_LEFT, id(quote_text).state.c_str());
+          it.printf(x_pad, yres-y_pad/2, id(font_footer), COLOR_ON, TextAlign::BASELINE_LEFT,  id(quote_title).state.c_str());
+          it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_ON, TextAlign::BASELINE_RIGHT, id(quote_author).state.c_str());
 deep_sleep:
   run_duration: ${run_time} 
   sleep_duration: ${sleep_time}
