Changed: Delta now shows difference since midnight using new utility_meter sensor instead of since a moving 12hr window

--- a/esphome/esp32-epaper.yaml
+++ b/esphome/esp32-epaper.yaml
@@ -199,7 +199,7 @@ binary_sensor:
 sensor:
   - platform: homeassistant
     id: crypto_change
-    entity_id: 'sensor.crypto_portfolio_change'
+    entity_id: 'sensor.crypto_daily_change'
   - platform: homeassistant
     id: crypto_portfolio
     entity_id: 'sensor.coinbase_portfolio_balance'
