--- a/esphome/epaper-t5.yaml
+++ b/esphome/epaper-t5.yaml
@@ -454,7 +454,7 @@ display:
   - platform: lilygo_t5_47
     id: t5_display
     rotation: 180
-    full_update_every: 1
+    full_update_every: 10
     update_interval: never
     pages:
       - id: page_white
@@ -537,7 +537,7 @@ display:
           double_t percentage = (1-(4.2-battery_voltage)/(4.2-2.9))*100;
           uint8_t battery_percentage = percentage < 0 ? 0 : percentage > 100 ? 100 : percentage;
         
-          it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_RIGHT, "%.2fV/%3d%%%", battery_voltage, battery_percentage);
+          it.printf(xres-x_pad, yres-y_pad/2, id(font_footer), COLOR_OFF, TextAlign::BASELINE_RIGHT, "%.2fV/%3d%%", battery_voltage, battery_percentage);
           
       - id: page_temps
         lambda: |-
