Fixed: workday sensor config now uses GB and province instead of Country=England (change following update to 2022.03.1)

--- a/includes/binary_sensors.yaml
+++ b/includes/binary_sensors.yaml
@@ -28,8 +28,10 @@
       value_template: >
          {{ 16 <= now().hour < 18 }}
 - platform: workday
-  country: England
+  country: GB
+  province: England
 - platform: workday
   name: workday_anna
   excludes: [sat, sun, mon, wed, holiday]
-  country: England
+  country: GB
+  province: England
