Added: New light groups Added: Expose group "Upstairs Lights" to Google Assistant Fixed: TV Backlight control based on status of living room lamps Changed: Moved groups yaml config to `includes` subdir

--- a/includes/google_assistant.yaml
+++ b/includes/google_assistant.yaml
@@ -74,6 +74,9 @@ entity_config:
       aliases:
         - Sebs lightstick
       expose: true
+    light.upstairs_light_group:
+      name: "Upstairs lights"
+      expose: true
     light.xmas_tree:
       name: "Christmas Tree Lights"
       aliases:
