--- a/automations.yaml
+++ b/automations.yaml
@@ -1567,8 +1567,11 @@
   description: ''
   trigger:
   - platform: state
-    entity_id: light.living_room_lights
-    for: 0:00:05
+    entity_id: light.living_room_light_group
+    for:
+      hours: 0
+      minutes: 0
+      seconds: 5
     from: 'off'
     to: 'on'
   - platform: state
@@ -1584,6 +1587,7 @@
   - service: light.turn_on
     target:
       device_id: 3e6c31ee1302701c6ed52132c128c57d
+    data: {}
   mode: single
 - id: '1626117606618'
   alias: 'Lights: Turn off TV Backlight'
@@ -1598,9 +1602,13 @@
     from: 'on'
     to: 'off'
   - platform: state
-    entity_id: light.living_room_lights
+    entity_id: light.living_room_light_group
     from: 'on'
     to: 'off'
+    for:
+      hours: 0
+      minutes: 0
+      seconds: 0
   condition:
   - condition: state
     entity_id: switch.living_room_watch_a_movie
@@ -1609,12 +1617,13 @@
     entity_id: switch.living_room_watch_tv
     state: 'off'
   - condition: state
-    entity_id: light.living_room_lights
+    entity_id: light.living_room_light_group
     state: 'off'
   action:
   - service: light.turn_off
     target:
       device_id: 3e6c31ee1302701c6ed52132c128c57d
+    data: {}
   mode: single
 - id: '1627329816479'
   alias: 'Lights: Hallway motion sensor'
@@ -1846,14 +1855,14 @@
       - service: light.toggle
         data: {}
         target:
-          entity_id: light.desk
+          entity_id: light.toms_desk_master
       face_1_rotate_counter_clockwise:
       - service: input_select.select_previous
         data: {}
         target:
           entity_id: input_select.wled_effects
       - service: light.turn_on
-        entity_id: light.desk
+        entity_id: light.toms_desk_master
         data:
           effect: '{{states(''input_select.wled_effects'')}}'
       face_2_knock:
@@ -1897,7 +1906,7 @@
         target:
           entity_id: input_select.wled_effects
       - service: light.turn_on
-        entity_id: light.desk
+        entity_id: light.toms_desk_master
         data:
           effect: '{{states(''input_select.wled_effects'')}}'
       face_4_knock:
