--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,7 +17,7 @@ binary_sensor: !include includes/binary_sensors.yaml
 device_tracker: !include includes/device_trackers.yaml
 downloader: !include includes/downloader.yaml
 google_assistant: !include includes/google_assistant.yaml
-group: !include groups.yaml
+group: !include includes/groups.yaml
 http: !include includes/http.yaml
 light: !include includes/light_groups.yaml
 neato: !include includes/neato.yaml
