--- a/includes/light_groups.yaml
+++ b/includes/light_groups.yaml
@@ -1,26 +1,39 @@
 - platform: group
-  name: Living Room Lights
+  name: Living Room Light Group
   entities:
-  - light.living_room_1
-  - light.living_room_2
+    - light.living_room_1
+    - light.living_room_2
 - platform: group
-  name: Main Bedroom Lights
+  name: Main Bedroom Light Group
   entities:
-  - light.main_bedroom_ceiling
-  - light.main_bedroom_bloom
+    - light.main_bedroom_ceiling
+    - light.main_bedroom_bloom
 - platform: group
-  name: Reubens Bedroom Lights
+  name: Reubens Bedroom Light Group
   entities:
-  - light.rname
-  - light.reuben_ceiling
+    - light.rname
+    - light.reuben_ceiling
 - platform: group
-  name: Sebs Bedroom Lights
+  name: Sebs Bedroom Light Group
   entities:
-  - light.seb_s_colour
-  - light.sebs_lamp
+    - light.sebs_ceiling
+    - light.sebs_lamp
 - platform: group
-  name: Second Bedroom Lights
+  name: Second Bedroom Light Group
   entities:
     - light.second_bedroom
-    - light.desk
-    - light.anna
+    - light.toms_desk_master
+    - light.annas_desk
+- platform: group
+  name: Upstairs Light Group
+  entities:
+    - light.main_bedroom_ceiling
+    - light.main_bedroom_bloom
+    - light.second_bedroom
+    - light.toms_desk_master
+    - light.annas_desk
+    - light.sebs_ceiling
+    - light.sebs_lamp
+    - light.rname
+    - light.reubens_ceiling  
+    
