--- a/includes/binary_sensors.yaml
+++ b/includes/binary_sensors.yaml
@@ -1,5 +1,15 @@
 - platform: template
   sensors:
+    tom_in_meeting:
+      friendly_name: "Is Tom in a Zoom/Teams meeting?"
+      value_template: >-
+        "{{ is_state('binary_sensor.zoom_tombjss',"on") or is_state('sensor.teams_activity','In a call') }}"
+      icon_template: >
+        {% if is_state("binary_sensor.tom_in_meeting", "on") %}
+          mdi:phone-in-talk
+        {% else %}
+          mdi:phone-hangup
+        {% endif %}
     washer:
       friendly_name: "Washing machine"
       value_template: >-
@@ -13,16 +23,11 @@
       delay_on: 
         minutes: 5
       delay_off:
-        seconds: 90
-            
-- platform: template
-  sensors:
+        seconds: 90            
     show_commute_work:
       friendly_name: Display card between 07:00 and 09:00.
       value_template: >
          {{ 7 <= now().hour < 9 }}
-- platform: template
-  sensors:
     show_commute_home:
       friendly_name: Display card between 16:00 and 18:00.
       value_template: >
@@ -35,3 +40,4 @@
   excludes: [sat, sun, mon, wed, holiday]
   country: GB
   province: England
+
